--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,12 @@ authors = ["pfenningpat <pat.pfenning@blastpoint.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.12"
+boto3 = ">=1.24.59,<1.24.60"
+deeplake = "^3.6.3"
+tensorflow = "^2.12.0"
+flask = "^2.3.2"
+jupyter = "^1.0.0"
 
 
 [build-system]
