--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ flask = "^2.3.2"
 jupyter = "^1.0.0"
 pandas = "^2.0.2"
 matplotlib = "^3.7.1"
+python-dotenv = "^1.0.0"
+pyacoustid = "^1.2.2"
+librosa = "^0.10.0.post2"
 
 
 [build-system]
